Version 2.25
-------------
Added new Thargoid materials

Version 2.24
-------------
Added setting to flip remaining/available value shown by default/on hover for wishlist materials
Updated Journal schemas to support v37(Update 15)
Added Thargoid Pulse Neutraliser module
Added new Thargoid tissue sample commodities

Version 2.23
-------------
Rework for file monitoring, significant improvements for network polling on Windows
Update for several German localizations
Added buttons to bartender to step per 10 items

Version 2.22
-------------
Fix material location for Jameson Crash Site(was listed as Jameson Memorial)
Fix bugs with blueprint pinning with less than 5 grades

Version 2.21
-------------
Fix for Frontier API issues

Version 2.20
-------------
Add new Caustic Sink Launcher engineering blueprints
Add progressbar to wishlist items
Update official guide link to playlist
Fix Heat Sink Launcher lightweight blueprint modifier

Version 2.19
-------------
Add new Aegis techbrokers
Add Caustic Sink Launcher blueprint
Updated some localizations

Version 2.18
-------------
Downgrade to java 18. java 19 compilation was unstable.
Add fix for journals with a lot of relogs causing Out Of Memory issues.
Add downtrade to horizons material tooltips - see what you can get from higher grade materials through trading
Add remember last opened tabs functionality. automatically opened on launch

Version 2.17
-------------
No update to the app
fix in the pacman app(deb/msi) to set updates executable on linux

Version 2.16
-------------
Fix log being disabled due to missing log framework
Fix AR/OCR not working due to broken logging

Version 2.15
-------------
Update to java 19. Fixes linux users not able to open links from the app.

Version 2.14
-------------
Disabled material and data tracking due to bad actors

Version 2.13
-------------
Fix for missing/bad values in EDDN Commodity messages
Updated RU localizations

Version 2.12
-------------