@@ -230,6 +230,7 @@ public class FXApplication extends Application {
                 watchedFolderFleetCarrier.mkdirs();
             }
             this.fleetCarrierWatcher = new GameStateWatcher();
+            ApplicationState.getInstance().getFcMaterials().set(false);
             this.fleetCarrierWatcher.watch(watchedFolderFleetCarrier, file -> FileProcessor.processCapiFile(file, JournalEventType.CAPI_FLEETCARRIER), AppConstants.FLEETCARRIER_FILE,false, JournalEventType.CAPI_FLEETCARRIER);
         }
 
