@@ -202,6 +202,9 @@ public class FileProcessor {
     }
 
     public static synchronized void processCapiFile(final File file, final JournalEventType journalEventType) {
+        if(journalEventType.equals(JournalEventType.CAPI_FLEETCARRIER)) {
+            ApplicationState.getInstance().getFcMaterials().set(true);
+        }
         Platform.runLater(() -> MessageHandler.handleCapiMessage(file, journalEventType));
     }
 
