@@ -101,6 +101,17 @@ public class EDDNCarrierJumpMapper extends EDDNMapper {
                                         .build())
                                 .toList())
                         .orElse(null))
+                .withThargoidWar(carrierJump.getThargoidWar()
+                        .map(thargoidWar -> new ThargoidWar.ThargoidWarBuilder()
+                                .withCurrentState(thargoidWar.getCurrentState())
+                                .withSuccessStateReached(thargoidWar.getSuccessStateReached())
+                                .withEstimatedRemainingTime(thargoidWar.getEstimatedRemainingTime().orElse(null))
+                                .withWarProgress(thargoidWar.getWarProgress().orElse(null))
+                                .withRemainingPorts(thargoidWar.getRemainingPorts().orElse(null))
+                                .withNextStateFailure(thargoidWar.getNextStateFailure().orElse(null))
+                                .withNextStateSuccess(thargoidWar.getNextStateSuccess().orElse(null))
+                        .build())
+                        .orElse(null))
                 .build();
     }
 }
