@@ -188,6 +188,20 @@
     -fx-fit-to-width: true;
 }
 
+.materialcard-fcamount {
+    -fx-padding: 0;
+    -fx-text-alignment: left;
+    /*-fx-min-width 3em;*/
+    -fx-min-width: 0em;
+    -fx-max-width: 0em;
+
+}
+
+.materialcard-fcamount-nonzero {
+    -fx-min-width: 3em;
+    -fx-max-width: 3em;
+    -fx-padding: 5;
+}
 .materialcard-amount {
     visibility: hidden;
     -fx-padding: 0;
@@ -217,6 +231,25 @@
     -fx-max-width: 2em;
 }
 
+.materialcard-fcamount-image {
+    -fx-min-width: 0em;
+    -fx-max-width: 0em;
+}
+
+.materialcard-fcamount-image-nonzero {
+    -fx-min-width: 2em;
+    -fx-max-width: 2em;
+}
+
+.material:hover .materialcard-fcamount-image {
+    -fx-min-width: 2em;
+    -fx-max-width: 2em;
+}
+.material:hover .materialcard-fcamount {
+    -fx-min-width: 3em;
+    -fx-max-width: 3em;
+    -fx-padding: 5;
+}
 .material:hover .materialcard-amount-image {
     visibility: visible;
     -fx-min-width: 2em;
