@@ -242,6 +242,67 @@
       },
       "additionalProperties" : false,
       "required" : [ "Small", "Medium", "Large" ]
+    },
+    "ThargoidWar": {
+      "title": "ThargoidWar",
+      "type": "object",
+      "description": "Thargoid war information",
+      "properties": {
+        "CurrentState": {
+          "title": "CurrentState",
+          "type": "string",
+          "examples": [
+            "Thargoid_Probing", "Thargoid_Harvest", "Thargoid_Controlled", "Thargoid_Stronghold", "Thargoid_Recovery"
+          ]
+        },
+        "NextStateSuccess": {
+          "title": "NextStateSuccess",
+          "type": "string",
+          "examples": [
+            "Thargoid_Probing", "Thargoid_Harvest", "Thargoid_Controlled", "Thargoid_Stronghold", "Thargoid_Recovery"
+          ]
+        },
+        "NextStateFailure": {
+          "title": "NextStateFailure",
+          "type": "string",
+          "examples": [
+            "Thargoid_Probing", "Thargoid_Harvest", "Thargoid_Controlled", "Thargoid_Stronghold", "Thargoid_Recovery"
+          ]
+        },
+        "SuccessStateReached": {
+          "title": "SuccessStateReached",
+          "type": "boolean",
+          "examples": [
+            true, false
+          ]
+        },
+        "WarProgress": {
+          "title": "WarProgress",
+          "type": "number",
+          "examples": [
+            0.15
+          ]
+        },
+        "RemainingPorts": {
+          "title": "RemainingPorts",
+          "type": "integer",
+          "examples": [
+            1
+          ]
+        },
+        "EstimatedRemainingTime": {
+          "title": "EstimatedRemainingTime",
+          "type": "string",
+          "examples": [
+            "1 Days"
+          ]
+        }
+      },
+      "additionalProperties": false,
+      "required": [
+        "CurrentState",
+        "SuccessStateReached"
+      ]
     }
   }
 }
